# postgres-mcp-server

./: README.md  pyproject.toml
postgres-mcp-server/: main.py
