[project]
name = "postgres-mcp-server"
version = "0.1.0"
description = "PostgreSQL MCP Server for database operations"
authors = [
    {name = "Andres Vourakis"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "mcp (>=1.16.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
